[package]
name = "rust-todo-list"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-rt = "2.10.0"
actix-web = "4.8.0"
serde = { version = "1.0.203", features = ["derive"] }
dotenv = "0.15.0"
config = "0.14.0"
tokio-pg-mapper = "0.2.0"
tokio-pg-mapper-derive = "0.2.0"
deadpool-postgres = "0.14.0"
tokio-postgres = "0.7.10"